# yim

./: Cargo.toml  Makefile  README.md  config.yaml  go.mod  go.sum
cmd/yimctl/: yimctl.go
im-common/: Cargo.toml
im-common/src/discovery/: discovery.rs  mod.rs  model.rs  register.rs
im-config/: Cargo.toml
im-config/src/: lib.rs
im-ipconfig/: Cargo.toml
im-ipconfig/src/: lib.rs
im-ipconfig/src/domain/: dispatcher.rs  endpoint.rs  endport.rs  mod.rs  stat.rs  window.rs
im-ipconfig/src/source/: mock.rs  mod.rs
im-state/: Cargo.toml
internal/cli/: cli.go
internal/cli/client/sdk/: client.go
internal/cli/client/ui/: ui.go
internal/common/discovery/: discovery.go  discovery_test.go  model.go  register.go  register_test.go
internal/ipconfig/: api.go  ipconfig.go  server.go
internal/ipconfig/domain/: context.go  dispatcher.go  endpoint.go  stat.go  window.go
internal/ipconfig/source/: data.go  event.go  mock.go
internal/yimctl/: yimctl.go
internal/yimctl/cmd/: cmd.go
internal/yimctl/cmd/client/: client.go
internal/yimctl/cmd/ipconfig/: ipconfig.go
src/: main.rs
src/cli/: ipconfig.rs  mod.rs  state.rs
zarf/compose/: docker-compose.yml
