[package]
name = "im"
version = "0.1.0"
edition = "2021"

[dependencies]
im-ipconfig = { path = "im-ipconfig" }
im-config = { path = "im-config" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
logforth = { workspace = true }
fastrace = { workspace = true }
enum_dispatch = "0.3.13"

[workspace]
members = ["im-ipconfig", "im-config", "im-common", "im-state"]

[workspace.dependencies]
log = "0.4.22"
logforth = { version = "0.19.2", features = ["fastrace"] }
anyhow = "1.0.94"
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0.216", features = ["derive"] }
etcd-client = "0.14.0"
once_cell = "1.20.2"
serde_json = "1.0.134"
rand = "0.8.5"
fastrace = { version = "0.7.5", features = ["enable"] }

[workspace.lints.rust]
unsafe_code = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
used_underscore_binding = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
if_not_else = "allow"
